--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,17 @@
 [tox]
-envlist = 2.7,pypy,3.4,3.5,pypy3,flake8,flakeplus,apicheck,configcheck
+envlist =
+    2.7-django1.9
+    2.7-django1.8
+    pypy-django1.9
+    pypy-django1.8
+    3.4-django1.9
+    3.4-django1.8
+    3.5-django1.9
+    3.5-django1.8
+
+    flake8
+    flakeplus
+    apicheck
 
 [testenv]
 deps=
@@ -7,15 +19,17 @@ deps=
     -r{toxinidir}/requirements/test.txt
     -r{toxinidir}/requirements/test-ci.txt
 
+    django1.9: -r{toxinidir}/requirements/test_django19.txt
+    django1.8: -r{toxinidir}/requirements/test_django18.txt
+
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus: -r{toxinidir}/requirements/pkgutils.txt
 sitepackages = False
 recreate = False
-commands = nosetests -xsv --with-coverage \
-                --cover-inclusive --cover-min-percentage=90 --cover-erase []
+commands = coverage run ./testproj/manage.py test -x
 
 basepython =
-    2.7,flake8,flakeplus,apicheck,linkcheck,configcheck: python2.7
+    2.7,flake8,flakeplus,apicheck,linkcheck,python2.7
     3.4: python3.4
     3.5: python3.5
     pypy: pypy
@@ -23,17 +37,10 @@ basepython =
 
 [testenv:apicheck]
 commands =
-    pip install -U -r{toxinidir}/requirements/dev.txt
     sphinx-build -W -b apicheck -d {envtmpdir}/doctrees docs docs/_build/apicheck
-
-[testenv:configcheck]
-commands =
-    pip install -U -r{toxinidir}/requirements/dev.txt
-    sphinx-build -W -b configcheck -d {envtmpdir}/doctrees docs docs/_build/configcheck
 
 [testenv:linkcheck]
 commands =
-    pip install -U -r{toxinidir}/requirements/dev.txt
     sphinx-build -W -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/linkcheck
 
 [testenv:flake8]
