--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ recreate = False
 commands = coverage run ./testproj/manage.py test -x
 
 basepython =
-    2.7,flake8,flakeplus,apicheck,linkcheck,python2.7
+    2.7,flake8,flakeplus,apicheck,linkcheck: python2.7
     3.4: python3.4
     3.5: python3.5
     pypy: pypy
