--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,15 @@
 [tox]
 envlist =
+    2.7-django1.10
     2.7-django1.9
     2.7-django1.8
+    pypy-django1.10
     pypy-django1.9
     pypy-django1.8
+    3.4-django1.10
     3.4-django1.9
     3.4-django1.8
+    3.4-django1.10
     3.5-django1.9
     3.5-django1.8
 
@@ -19,6 +23,7 @@ deps=
     -r{toxinidir}/requirements/test.txt
     -r{toxinidir}/requirements/test-ci.txt
 
+    django1.10: -r{toxinidir}/requirements/test_django10.txt
     django1.9: -r{toxinidir}/requirements/test_django19.txt
     django1.8: -r{toxinidir}/requirements/test_django18.txt
 
