--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,7 @@
-[nosetests]
-where = django_celery_beat/tests
+[tool:pytest]
+testpaths = t/unit/
+python_classes = test_*
+DJANGO_SETTINGS_MODULE=t.proj.settings
 
 [wheel]
 universal = 1
