--- a/tox.ini
+++ b/tox.ini
@@ -23,15 +23,15 @@ deps=
     -r{toxinidir}/requirements/test.txt
     -r{toxinidir}/requirements/test-ci.txt
 
-    django1.10: -r{toxinidir}/requirements/test_django110.txt
-    django1.9: -r{toxinidir}/requirements/test_django19.txt
-    django1.8: -r{toxinidir}/requirements/test_django18.txt
+    django1.10: -r{toxinidir}/requirements/test-django110.txt
+    django1.9: -r{toxinidir}/requirements/test-django19.txt
+    django1.8: -r{toxinidir}/requirements/test-django18.txt
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus: -r{toxinidir}/requirements/pkgutils.txt
 sitepackages = False
 recreate = False
-commands = coverage run ./testproj/manage.py test -x
+commands = py.test -xv --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
 
 basepython =
     2.7,flake8,flakeplus,apicheck,linkcheck: python2.7
