--- a/tox.ini
+++ b/tox.ini
@@ -16,12 +16,15 @@ envlist =
     flake8
     flakeplus
     apicheck
+    cov
 
 [testenv]
 deps=
     -r{toxinidir}/requirements/default.txt
     -r{toxinidir}/requirements/test.txt
     -r{toxinidir}/requirements/test-ci.txt
+
+    cov: -r{toxinidir}/requirements/test-django.txt
 
     django1.10: -r{toxinidir}/requirements/test-django110.txt
     django1.9: -r{toxinidir}/requirements/test-django19.txt
@@ -31,10 +34,13 @@ deps=
     flake8,flakeplus: -r{toxinidir}/requirements/pkgutils.txt
 sitepackages = False
 recreate = False
-commands = py.test -xv --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
+commands =
+    pip install -U https://github.com/celery/celery/zipball/master#egg=celery
+    pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
+    py.test -xv
 
 basepython =
-    2.7,flake8,flakeplus,apicheck,linkcheck: python2.7
+    2.7,flake8,flakeplus,apicheck,linkcheck,cov: python2.7
     3.4: python3.4
     3.5: python3.5
     pypy: pypy
@@ -50,8 +56,12 @@ commands =
 
 [testenv:flake8]
 commands =
-    flake8 --ignore=X999 {toxinidir}/django_celery_beat
+    flake8 --ignore=X999 {toxinidir}/django_celery_beat {toxinidir}/t
 
 [testenv:flakeplus]
 commands =
-    flakeplus --2.7 {toxinidir}/django_celery_beat
+    flakeplus --2.7 {toxinidir}/django_celery_beat {toxinidir}/t
+
+[testenv:cov]
+usedevelop = true
+commands = py.test -x --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
