--- a/tox.ini
+++ b/tox.ini
@@ -64,4 +64,7 @@ commands =
 
 [testenv:cov]
 usedevelop = true
-commands = py.test -x --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
+commands =
+    pip install -U https://github.com/celery/celery/zipball/master#egg=celery
+    pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
+    py.test -x --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
