Adds pydocstyle tox target

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ envlist =
     flake8
     flakeplus
     apicheck
+    pydocstyle
     cov
 
 [testenv]
@@ -31,7 +32,7 @@ deps=
     django1.8: -r{toxinidir}/requirements/test-django18.txt
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
-    flake8,flakeplus: -r{toxinidir}/requirements/pkgutils.txt
+    flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
 sitepackages = False
 recreate = False
 commands =
@@ -40,7 +41,7 @@ commands =
     py.test -xv
 
 basepython =
-    2.7,flake8,flakeplus,apicheck,linkcheck,cov: python2.7
+    2.7,flake8,flakeplus,apicheck,linkcheck,pydocstyle,cov: python2.7
     3.4: python3.4
     3.5: python3.5
     pypy: pypy
@@ -56,11 +57,15 @@ commands =
 
 [testenv:flake8]
 commands =
-    flake8 --ignore=X999 {toxinidir}/django_celery_beat {toxinidir}/t
+    flake8 {toxinidir}/django_celery_beat {toxinidir}/t
 
 [testenv:flakeplus]
 commands =
     flakeplus --2.7 {toxinidir}/django_celery_beat {toxinidir}/t
+
+[testenv:pydocstyle]
+commands =
+    pydocstyle {toxinidir}/django_celery_beat
 
 [testenv:cov]
 usedevelop = true
