--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,19 @@
 [tox]
 envlist =
+    2.7-django1.11
     2.7-django1.10
     2.7-django1.9
     2.7-django1.8
+    pypy-django1.11
     pypy-django1.10
     pypy-django1.9
     pypy-django1.8
+    3.4-django1.11
     3.4-django1.10
     3.4-django1.9
     3.4-django1.8
-    3.4-django1.10
+    3.5-django1.11
+    3.5-django1.10
     3.5-django1.9
     3.5-django1.8
 
@@ -27,6 +31,7 @@ deps=
 
     cov: -r{toxinidir}/requirements/test-django.txt
 
+    django1.11: -r{toxinidir}/requirements/test-django111.txt
     django1.10: -r{toxinidir}/requirements/test-django110.txt
     django1.9: -r{toxinidir}/requirements/test-django19.txt
     django1.8: -r{toxinidir}/requirements/test-django18.txt
