Install "ephem" in the test suite.
This fixes the tests failing due to the missing "ephem" library, which has been removed in https://github.com/celery/django-celery-beat/pull/94.

--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,8 @@ deps=
     django1.9: -r{toxinidir}/requirements/test-django19.txt
     django1.8: -r{toxinidir}/requirements/test-django18.txt
 
+    2.7,pypy,3.4,3.5,cov: ephem
+
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
 sitepackages = False
