--- a/tox.ini
+++ b/tox.ini
@@ -46,9 +46,9 @@ commands =
     py.test -xv
 
 basepython =
-    2.7,flake8,flakeplus,apicheck,linkcheck,pydocstyle,cov: python2.7
+    2.7,flake8,flakeplus,apicheck,linkcheck,pydocstyle: python2.7
     3.4: python3.4
-    3.5: python3.5
+    3.5,cov: python3.5
     pypy: pypy
     pypy3: pypy3
 
