Enable the "linkcheck" test environment.
The "linkcheck" test environment installs the latest release of "Django" through "requirements/docs.txt", which no longer supports Python 2. So it needs to be run with Python 3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ env:
     - TOXENV=flake8
     - TOXENV=flakeplus
     - TOXENV=apicheck
+    - TOXENV=linkcheck
     - TOXENV=pydocstyle
     - TOXENV=cov
 install: travis_retry pip install -U tox
