--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ envlist =
     flake8
     flakeplus
     apicheck
+    linkcheck
     pydocstyle
     cov
 
@@ -46,9 +47,9 @@ commands =
     py.test -xv
 
 basepython =
-    2.7,flake8,flakeplus,linkcheck,pydocstyle: python2.7
+    2.7,flake8,flakeplus,pydocstyle: python2.7
     3.4: python3.4
-    3.5,cov,apicheck: python3.5
+    3.5,cov,apicheck,linkcheck: python3.5
     pypy: pypy
     pypy3: pypy3
 
