--- a/tox.ini
+++ b/tox.ini
@@ -1,27 +1,23 @@
 [tox]
 envlist =
-    2.7-django1.11
-    2.7-django1.10
-    2.7-django1.9
-    2.7-django1.8
-    pypy-django1.11
-    pypy-django1.10
-    pypy-django1.9
-    pypy-django1.8
-    3.4-django1.11
-    3.4-django1.10
-    3.4-django1.9
-    3.4-django1.8
-    3.5-django1.11
-    3.5-django1.10
-    3.5-django1.9
-    3.5-django1.8
+    py27-django{18,19,110,111}
+    py34-django{18,19,110,111}
+    py35-django{18,19,110,111}
+    pypy-django{18,19,110,111}
 
     flake8
     flakeplus
     apicheck
+    linkcheck
     pydocstyle
     cov
+
+[travis:env]
+DJANGO =
+    1.8: django18
+    1.9: django19
+    1.10: django110
+    1.11: django111
 
 [testenv]
 deps=
@@ -31,10 +27,12 @@ deps=
 
     cov: -r{toxinidir}/requirements/test-django.txt
 
-    django1.11: -r{toxinidir}/requirements/test-django111.txt
-    django1.10: -r{toxinidir}/requirements/test-django110.txt
-    django1.9: -r{toxinidir}/requirements/test-django19.txt
-    django1.8: -r{toxinidir}/requirements/test-django18.txt
+    django111: -r{toxinidir}/requirements/test-django111.txt
+    django110: -r{toxinidir}/requirements/test-django110.txt
+    django19: -r{toxinidir}/requirements/test-django19.txt
+    django18: -r{toxinidir}/requirements/test-django18.txt
+
+    py{27,34,35,py},cov: ephem
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
@@ -45,34 +43,33 @@ commands =
     pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
     py.test -xv
 
-basepython =
-    2.7,flake8,flakeplus,apicheck,linkcheck,pydocstyle,cov: python2.7
-    3.4: python3.4
-    3.5: python3.5
-    pypy: pypy
-    pypy3: pypy3
-
 [testenv:apicheck]
+basepython = python3.5
 commands =
     sphinx-build -W -b apicheck -d {envtmpdir}/doctrees docs docs/_build/apicheck
 
 [testenv:linkcheck]
+basepython = python3.5
 commands =
     sphinx-build -W -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/linkcheck
 
 [testenv:flake8]
+basepython = python2.7
 commands =
     flake8 {toxinidir}/django_celery_beat {toxinidir}/t
 
 [testenv:flakeplus]
+basepython = python2.7
 commands =
     flakeplus --2.7 {toxinidir}/django_celery_beat {toxinidir}/t
 
 [testenv:pydocstyle]
+basepython = python2.7
 commands =
     pydocstyle {toxinidir}/django_celery_beat
 
 [testenv:cov]
+basepython = python3.5
 usedevelop = true
 commands =
     pip install -U https://github.com/celery/celery/zipball/master#egg=celery
