--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
   - DJANGO=1.9
   - DJANGO=1.10
   - DJANGO=1.11
+  - DJANGO=2.0
 os:
   - linux
 matrix:
@@ -21,6 +22,9 @@ matrix:
     - { python: 3.5, env: TOXENV=apicheck }
     - { python: 3.5, env: TOXENV=linkcheck }
     - { python: 3.5, env: TOXENV=cov }
+  exclude:
+    - { python: 2.7, env: DJANGO=2.0 }
+    - { python: pypy, env: DJANGO=2.0 }
 install: travis_retry pip install -U tox-travis
 services: rabbitmq
 script: tox -v -- -v
