--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
     py27-django{18,19,110,111}
-    py34-django{18,19,110,111}
-    py35-django{18,19,110,111}
+    py34-django{18,19,110,111,20}
+    py35-django{18,19,110,111,20}
     pypy-django{18,19,110,111}
 
     flake8
@@ -18,6 +18,7 @@ DJANGO =
     1.9: django19
     1.10: django110
     1.11: django111
+    2.0: django20
 
 [testenv]
 deps=
@@ -27,6 +28,7 @@ deps=
 
     cov: -r{toxinidir}/requirements/test-django.txt
 
+    django20: -r{toxinidir}/requirements/test-django20.txt
     django111: -r{toxinidir}/requirements/test-django111.txt
     django110: -r{toxinidir}/requirements/test-django110.txt
     django19: -r{toxinidir}/requirements/test-django19.txt
