--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
     py27-django{111}
-    py34-django{111,20}
-    py35-django{111,20}
+    py36-django{111,20,21,22}
+    py35-django{111,20,21,22}
     pypy-django{111}
 
     flake8
@@ -16,6 +16,8 @@ envlist =
 DJANGO =
     1.11: django111
     2.0: django20
+    2.1: django21
+    2.2: django22
 
 [testenv]
 deps=
@@ -25,10 +27,12 @@ deps=
 
     cov: -r{toxinidir}/requirements/test-django.txt
 
+    django22: -r{toxinidir}/requirements/test-django22.txt
+    django21: -r{toxinidir}/requirements/test-django21.txt
     django20: -r{toxinidir}/requirements/test-django20.txt
     django111: -r{toxinidir}/requirements/test-django111.txt
 
-    py{27,34,35,py},cov: ephem
+    py{27,36,35,py},cov: ephem
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
