--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
     py27-django{111}
-    py34-django{111,20}
     py35-django{111,20}
+    py37-django{111,20}
     pypy-django{111}
 
     flake8
@@ -28,15 +28,17 @@ deps=
     django20: -r{toxinidir}/requirements/test-django20.txt
     django111: -r{toxinidir}/requirements/test-django111.txt
 
-    py{27,34,35,py},cov: ephem
+    py{27}: -r{toxinidir}/requirements/python2.txt
+    py{35,37}: -r{toxinidir}/requirements/python3.txt
+
+    py{27,35,37,py},cov: ephem
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
 sitepackages = False
 recreate = False
 commands =
-    pip install -U https://github.com/celery/celery/zipball/master#egg=celery
-    pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
+    pip list
     py.test -xv
 
 [testenv:apicheck]
