Fix python 3.7 for travis-ci, fix flake8 error, move more things to 3.7

--- a/tox.ini
+++ b/tox.ini
@@ -42,32 +42,33 @@ commands =
     py.test -xv
 
 [testenv:apicheck]
-basepython = python3.5
+basepython = python3.7
 commands =
     sphinx-build -W -b apicheck -d {envtmpdir}/doctrees docs docs/_build/apicheck
 
 [testenv:linkcheck]
-basepython = python3.5
+basepython = python3.7
 commands =
     sphinx-build -W -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/linkcheck
 
 [testenv:flake8]
-basepython = python2.7
+basepython = python3.7
 commands =
     flake8 {toxinidir}/django_celery_beat {toxinidir}/t
 
 [testenv:flakeplus]
+# flakeplus is specifically to catch python2 things only
 basepython = python2.7
 commands =
     flakeplus --2.7 {toxinidir}/django_celery_beat {toxinidir}/t
 
 [testenv:pydocstyle]
-basepython = python2.7
+basepython = python3.7
 commands =
     pydocstyle {toxinidir}/django_celery_beat
 
 [testenv:cov]
-basepython = python3.5
+basepython = python3.7
 usedevelop = true
 commands =
     pip install -U https://github.com/celery/celery/zipball/master#egg=celery
