--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ python:
   - 2.7
   - 3.5
   - 3.7
-    dist: xenial
-    sudo: true
   - pypy
 env:
   - DJANGO=1.11
@@ -16,6 +14,9 @@ os:
   - linux
 matrix:
   include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
     - { python: 2.7, env: TOXENV=flake8 }
     - { python: 2.7, env: TOXENV=flakeplus }
     - { python: 2.7, env: TOXENV=pydocstyle }
