--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ cache: false
 python:
   - 2.7
   - 3.5
-  - 3.7
   - pypy
 env:
   - DJANGO=1.11
@@ -14,9 +13,9 @@ os:
   - linux
 matrix:
   include:
-    - python: 3.7
-      dist: xenial
-      sudo: true
+    - {python: 3.7, env: DJANGO=1.11, dist: xenial, sudo: true}
+    - {python: 3.7, env: DJANGO=2.0, dist: xenial, sudo: true}
+    - {python: 3.7, env: DJANGO=2.2, dist: xenial, sudo: true}
     - { python: 2.7, env: TOXENV=flake8 }
     - { python: 2.7, env: TOXENV=flakeplus }
     - { python: 2.7, env: TOXENV=pydocstyle }
