--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ deps=
     django20: -r{toxinidir}/requirements/test-django20.txt
     django111: -r{toxinidir}/requirements/test-django111.txt
 
-    py{27}: -r{toxinidir}/requirements/python2.txt
+    py{27,py}: -r{toxinidir}/requirements/python2.txt
     py{35,37}: -r{toxinidir}/requirements/python3.txt
 
     py{27,35,37,py},cov: ephem
