Use older version of django for doc/cov due to sqlite incompatibility

--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ deps=
     py{35,37}: -r{toxinidir}/requirements/python3.txt
 
     py{27,35,37,py},cov: ephem
+    cov: django==1.11
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
@@ -54,7 +55,7 @@ commands =
 [testenv:flake8]
 basepython = python3.5
 commands =
-    flake8 {toxinidir}/django_celery_beat {toxinidir}/t
+    python -m flake8 {toxinidir}/django_celery_beat {toxinidir}/t
 
 [testenv:flakeplus]
 # flakeplus is specifically to catch python2 things only
@@ -73,4 +74,5 @@ usedevelop = true
 commands =
     pip install -U https://github.com/celery/celery/zipball/master#egg=celery
     pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
+    pip install Django==2.0
     py.test -x --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
