Try setting hostname on containers to fix rabbitmq-server on xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,6 @@ script: tox -v -- -v
 after_success:
   - .tox/$TRAVIS_PYTHON_VERSION/bin/coverage xml
   - .tox/$TRAVIS_PYTHON_VERSION/bin/codecov -e TOXENV
+addons:
+  hosts:
+    - travis.dev
