debugging rabbitmq on xenial in travis container

--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,7 @@ sitepackages = False
 recreate = False
 commands =
     pip list
+    /etc/init.d/rabbitmq-server status
     py.test -xv
 
 [testenv:apicheck]
