More python37 in travis-ci debugging

--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,14 @@ sitepackages = False
 recreate = False
 commands =
     pip list
-    /etc/init.d/rabbitmq-server status
+    py.test -xv
+
+[testenv:python37]
+basepython = python3.7
+commands =
+    pip list
+    apt install -y rabbitmq-server
+    /etc/init.d/rabbitmq-server start
     py.test -xv
 
 [testenv:apicheck]
