--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ os:
   - linux
 matrix:
   include:
-    - {python: 3.7, env: DJANGO=1.11, dist: xenial, sudo: true}
-    - {python: 3.7, env: DJANGO=2.0, dist: xenial, sudo: true}
-    - {python: 3.7, env: DJANGO=2.2, dist: xenial, sudo: true}
+    - {python: 3.7, env: DJANGO=1.11 TOXENV=python37, dist: xenial, sudo: true}
+    - {python: 3.7, env: DJANGO=2.0 TOXENV=python37, dist: xenial, sudo: true}
+    - {python: 3.7, env: DJANGO=2.2 TOXENV=python37, dist: xenial, sudo: true}
     - { python: 3.5, env: TOXENV=flake8 }
     - { python: 2.7, env: TOXENV=flakeplus }
     - { python: 3.5, env: TOXENV=pydocstyle }
