--- a/tox.ini
+++ b/tox.ini
@@ -45,8 +45,8 @@ commands =
 basepython = python3.7
 commands =
     pip list
-    apt install -y rabbitmq-server
-    /etc/init.d/rabbitmq-server start
+    sudo apt install -y rabbitmq-server
+    sudo /etc/init.d/rabbitmq-server start
     py.test -xv
 
 [testenv:apicheck]
