python37 try updating erlang to make rabbitmq work

--- a/tox.ini
+++ b/tox.ini
@@ -45,8 +45,17 @@ commands =
 basepython = python3.7
 commands =
     pip list
-    sudo apt install -y rabbitmq-server
+    # for ubutu xenial we must fix erlang for rabbitmq-server to work
+    sudo apt install -y wget
+    wget http://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
+    sudo apt-key add erlang_solutions.asc
+    sudo apt-get update
+    sudo apt-get -y install erlang
+    sudo apt-get -y install erlang-nox
+    sudo apt-get -y rabbitmq-server
     sudo /etc/init.d/rabbitmq-server start
+    sudo /etc/init.d/rabbitmq-server status
+
     py.test -xv
 
 [testenv:apicheck]
