Fix installation commands for erlang install on xenial

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,9 @@ envlist =
     py37-django{111,20}
     pypy-django{111}
 
+    sudo
+    wget
+
     flake8
     flakeplus
     apicheck
@@ -49,10 +52,10 @@ commands =
     sudo apt install -y wget
     wget http://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
     sudo apt-key add erlang_solutions.asc
-    sudo apt-get update
-    sudo apt-get -y install erlang
-    sudo apt-get -y install erlang-nox
-    sudo apt-get -y rabbitmq-server
+    sudo apt update
+    sudo apt install -y erlang
+    sudo apt install -y erlang-nox
+    sudo apt install -y rabbitmq-server
     sudo /etc/init.d/rabbitmq-server start
     sudo /etc/init.d/rabbitmq-server status
 
