--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,10 @@ matrix:
     - { python: 3.5, env: TOXENV=flake8 }
     - { python: 2.7, env: TOXENV=flakeplus }
     - { python: 3.5, env: TOXENV=pydocstyle }
-    - { python: 3.5, env: TOXENV=apicheck }
-    - { python: 3.5, env: TOXENV=linkcheck }
+    # disabled temporarily due to upstream bug
+    # https://github.com/celery/sphinx_celery/issues/9
+    # - { python: 3.5, env: TOXENV=apicheck }
+    # - { python: 3.5, env: TOXENV=linkcheck }
     - { python: 3.5, env: TOXENV=cov }
   exclude:
     - { python: 2.7, env: DJANGO=2.0 }
