python37 also manually install celery from latest master, allow external commands

--- a/tox.ini
+++ b/tox.ini
@@ -5,15 +5,15 @@ envlist =
     py37-django{111,20}
     pypy-django{111}
 
-    sudo
-    wget
-
     flake8
     flakeplus
     apicheck
     linkcheck
     pydocstyle
     cov
+
+# allow running non-python installed commands like wget, sudo, etc.
+whitelist_externals = *
 
 [travis:env]
 DJANGO =
@@ -58,6 +58,9 @@ commands =
     sudo apt install -y rabbitmq-server
     sudo /etc/init.d/rabbitmq-server start
     sudo /etc/init.d/rabbitmq-server status
+
+    pip install -U https://github.com/celery/celery/zipball/master#egg=celery
+    pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
 
     py.test -xv
 
