More python37 hackup fixing

--- a/tox.ini
+++ b/tox.ini
@@ -12,9 +12,6 @@ envlist =
     pydocstyle
     cov
 
-# allow running non-python installed commands like wget, sudo, etc.
-whitelist_externals = *
-
 [travis:env]
 DJANGO =
     1.11: django111
@@ -46,6 +43,7 @@ commands =
 
 [testenv:python37]
 basepython = python3.7
+whitelist_externals = *
 commands =
     pip list
     # for ubutu xenial we must fix erlang for rabbitmq-server to work
@@ -59,6 +57,7 @@ commands =
     sudo /etc/init.d/rabbitmq-server start
     sudo /etc/init.d/rabbitmq-server status
 
+    pip install ephem
     pip install -U https://github.com/celery/celery/zipball/master#egg=celery
     pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
 
