Fix up tests (#243)
* Fix up tests

1. add test runs for python 3.7, remove 3.4
2. fix 2.7 tests to not use celery versions that don't support it
3. add pytest-timeout to avoid hanging certain tests when broker is not running

* Fix python 3.7 for travis-ci, fix flake8 error, move more things to 3.7

* yml formatting

* Put the 3.7 options in the right location of the travis-ci.yml

* celery python2 limit is 5.0 so properly set that.

* Attempt to bend travis-ci to my will with python 3.7

* load python2 requriements for pypy

* Properly match python version between tox.ini and travis.yml for doc/analysis tasks.

* Use older version of django for doc/cov due to sqlite incompatibility

* Fix a flake8 error, and fix django dependency for coverage

* Try setting hostname on containers to fix rabbitmq-server on xenial

* debugging rabbitmq on xenial in travis container

* More python37 in travis-ci debugging

* More python37 debugging

* python37 try updating erlang to make rabbitmq work

* Fix installation commands for erlang install on xenial

* python37 also manually install celery from latest master, allow external commands

* More python37 hackup fixing

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,25 +3,32 @@ sudo: false
 cache: false
 python:
   - 2.7
-  - 3.4
   - 3.5
   - pypy
 env:
   - DJANGO=1.11
   - DJANGO=2.0
+  - DJANGO=2.2
 os:
   - linux
 matrix:
   include:
-    - { python: 2.7, env: TOXENV=flake8 }
+    - {python: 3.7, env: DJANGO=1.11 TOXENV=python37, dist: xenial, sudo: true}
+    - {python: 3.7, env: DJANGO=2.0 TOXENV=python37, dist: xenial, sudo: true}
+    - {python: 3.7, env: DJANGO=2.2 TOXENV=python37, dist: xenial, sudo: true}
+    - { python: 3.5, env: TOXENV=flake8 }
     - { python: 2.7, env: TOXENV=flakeplus }
-    - { python: 2.7, env: TOXENV=pydocstyle }
-    - { python: 3.5, env: TOXENV=apicheck }
-    - { python: 3.5, env: TOXENV=linkcheck }
+    - { python: 3.5, env: TOXENV=pydocstyle }
     - { python: 3.5, env: TOXENV=cov }
+    # disabled temporarily due to upstream bug
+    # https://github.com/celery/sphinx_celery/issues/9
+    # - { python: 3.5, env: TOXENV=apicheck }
+    # - { python: 3.5, env: TOXENV=linkcheck }
   exclude:
     - { python: 2.7, env: DJANGO=2.0 }
+    - { python: 2.7, env: DJANGO=2.2 }
     - { python: pypy, env: DJANGO=2.0 }
+    - { python: pypy, env: DJANGO=2.2 }
 install: travis_retry pip install -U tox-travis
 services: rabbitmq
 script: tox -v -- -v
