--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
     py27-django{111}
-    py34-django{111,20}
     py35-django{111,20}
+    py37-django{111,20}
     pypy-django{111}
 
     flake8
@@ -23,20 +23,44 @@ deps=
     -r{toxinidir}/requirements/test.txt
     -r{toxinidir}/requirements/test-ci.txt
 
-    cov: -r{toxinidir}/requirements/test-django.txt
+    cov: -r{toxinidir}/requirements/test-django111.txt
 
     django20: -r{toxinidir}/requirements/test-django20.txt
     django111: -r{toxinidir}/requirements/test-django111.txt
 
-    py{27,34,35,py},cov: ephem
+    py{27,py}: -r{toxinidir}/requirements/python2.txt
+    py{35,37}: -r{toxinidir}/requirements/python3.txt
+
+    py{27,35,37,py},cov: ephem
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
 sitepackages = False
 recreate = False
 commands =
+    pip list
+    py.test -xv
+
+[testenv:python37]
+basepython = python3.7
+whitelist_externals = *
+commands =
+    pip list
+    # for ubutu xenial we must fix erlang for rabbitmq-server to work
+    sudo apt install -y wget
+    wget http://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
+    sudo apt-key add erlang_solutions.asc
+    sudo apt update
+    sudo apt install -y erlang
+    sudo apt install -y erlang-nox
+    sudo apt install -y rabbitmq-server
+    sudo /etc/init.d/rabbitmq-server start
+    sudo /etc/init.d/rabbitmq-server status
+
+    pip install ephem
     pip install -U https://github.com/celery/celery/zipball/master#egg=celery
     pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
+
     py.test -xv
 
 [testenv:apicheck]
@@ -50,17 +74,18 @@ commands =
     sphinx-build -W -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/linkcheck
 
 [testenv:flake8]
-basepython = python2.7
+basepython = python3.5
 commands =
-    flake8 {toxinidir}/django_celery_beat {toxinidir}/t
+    python -m flake8 {toxinidir}/django_celery_beat {toxinidir}/t
 
 [testenv:flakeplus]
+# flakeplus is specifically to catch python2 things only
 basepython = python2.7
 commands =
     flakeplus --2.7 {toxinidir}/django_celery_beat {toxinidir}/t
 
 [testenv:pydocstyle]
-basepython = python2.7
+basepython = python3.5
 commands =
     pydocstyle {toxinidir}/django_celery_beat
 
@@ -70,4 +95,5 @@ usedevelop = true
 commands =
     pip install -U https://github.com/celery/celery/zipball/master#egg=celery
     pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
+    pip install Django==2.0
     py.test -x --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
