sqlite won't let you run things like migrations inside another transaction (like a test)

--- a/tox.ini
+++ b/tox.ini
@@ -62,6 +62,10 @@ commands =
     pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
 
     py.test -xv
+    # ensure we can migrate up, back, and up again
+    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat 0001
+    python manage.py migrate django_celery_beat
 
 [testenv:apicheck]
 basepython = python3.5
