--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ envlist =
 DJANGO =
     1.11: django111
     2.0: django20
+    2.2: django22
 
 [testenv]
 deps=
@@ -27,6 +28,7 @@ deps=
 
     django20: -r{toxinidir}/requirements/test-django20.txt
     django111: -r{toxinidir}/requirements/test-django111.txt
+    django22: -r{toxinidir}/requirements/test-django22.txt
 
     py{27,py}: -r{toxinidir}/requirements/python2.txt
     py{35,37}: -r{toxinidir}/requirements/python3.txt
@@ -44,6 +46,10 @@ commands =
 [testenv:python37]
 basepython = python3.7
 whitelist_externals = *
+deps = 
+    django20: -r{toxinidir}/requirements/test-django20.txt
+    django111: -r{toxinidir}/requirements/test-django111.txt
+    django22: -r{toxinidir}/requirements/test-django22.txt
 commands =
     pip list
     # for ubutu xenial we must fix erlang for rabbitmq-server to work
