Run migration backward/forward for all tests

--- a/tox.ini
+++ b/tox.ini
@@ -42,12 +42,15 @@ recreate = False
 commands =
     pip list
     py.test -xv
+    # ensure we can migrate up, back, and up again
+    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat 0001
+    python manage.py migrate django_celery_beat
 
 [testenv:python37]
 basepython = python3.7
 whitelist_externals = *
 commands =
-    pip list
     # for ubutu xenial we must fix erlang for rabbitmq-server to work
     sudo apt install -y wget
     wget http://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
@@ -63,6 +66,7 @@ commands =
     pip install -U https://github.com/celery/celery/zipball/master#egg=celery
     pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
 
+    pip list
     py.test -xv
     # ensure we can migrate up, back, and up again
     python manage.py migrate django_celery_beat
