Fix various things - WIP (#241)
* Django 1.11.17 is required to work with python 3.7+ so make sure to install that.

* First pass at cleaning up the models some

Adding proper verbose_name and help_text for all fields.  Add validators to some as well.
Verified that manage.py test still passes.

This is a WIP though, it will need a migration before we're done.

* Fix flake8 errors

* Fix pydocstyle errors

*  Add migration, fix migration history, add tests around migrations.

Migrations were broken if you went backward and forward again, so I fixed the history with a new migration.  I then was able to properly add my own new migration.  Lastly, I added tests to try and ensure no migration issues happened again.

* Make raw sql a tuple format to avoid sqlparse requirement

* Must add absolute_import to every file for python2

* Don't have to clear our django's migration history, apparently it works fine without that.

* sqlite won't let you run things like migrations inside another transaction (like a test)

* Fix django 2.2 tests

* Setting TOXENV seems to no longer handle the django env variable, so just let it do one test with latest django.

* Run migration backward/forward for all tests

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ envlist =
 DJANGO =
     1.11: django111
     2.0: django20
+    2.2: django22
 
 [testenv]
 deps=
@@ -27,6 +28,7 @@ deps=
 
     django20: -r{toxinidir}/requirements/test-django20.txt
     django111: -r{toxinidir}/requirements/test-django111.txt
+    django22: -r{toxinidir}/requirements/test-django22.txt
 
     py{27,py}: -r{toxinidir}/requirements/python2.txt
     py{35,37}: -r{toxinidir}/requirements/python3.txt
@@ -40,12 +42,15 @@ recreate = False
 commands =
     pip list
     py.test -xv
+    # ensure we can migrate up, back, and up again
+    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat 0001
+    python manage.py migrate django_celery_beat
 
 [testenv:python37]
 basepython = python3.7
 whitelist_externals = *
 commands =
-    pip list
     # for ubutu xenial we must fix erlang for rabbitmq-server to work
     sudo apt install -y wget
     wget http://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
@@ -61,7 +66,12 @@ commands =
     pip install -U https://github.com/celery/celery/zipball/master#egg=celery
     pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
 
+    pip list
     py.test -xv
+    # ensure we can migrate up, back, and up again
+    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat 0001
+    python manage.py migrate django_celery_beat
 
 [testenv:apicheck]
 basepython = python3.5
