First pass at doing an upgrade test

--- a/tox.ini
+++ b/tox.ini
@@ -73,6 +73,22 @@ commands =
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
 
+[testenv:upgrade111]
+basepython = python3.5
+whitelist_externals = *
+commands =
+    pip install -U https://github.com/celery/celery/zipball/master#egg=celery
+    pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
+    pip list
+    # first install our starting version
+    git checkout v1.1.1
+    python manage.py migrate django-celery-beat
+    # now install latest and ensure all migrations continue to work
+    git checkout master
+    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat 0001
+    python manage.py migrate django_celery_beat
+
 [testenv:apicheck]
 basepython = python3.5
 commands =
