--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ os:
 matrix:
   include:
     - {python: 3.7, env: TOXENV=python37, dist: xenial, sudo: true}
+    - { python: 3.5, env: TOXENV=upgrade111 }
     - { python: 3.5, env: TOXENV=flake8 }
     - { python: 2.7, env: TOXENV=flakeplus }
     - { python: 3.5, env: TOXENV=pydocstyle }
