Use older versions of django/celery for upgrade tests

--- a/tox.ini
+++ b/tox.ini
@@ -73,12 +73,13 @@ commands =
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
 
-[testenv:upgrade111]
-basepython = python3.5
+[testenv:upgradebeat111]
+basepython = python2.7
 whitelist_externals = *
 commands =
-    pip install -U https://github.com/celery/celery/zipball/master#egg=celery
-    pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
+    # must use older versions for starting with older celery-beat
+    pip install "django>=1.11.17,<2.0"
+    pip install "celery<5.0.0"
     pip list
     # first install our starting version
     git checkout v1.1.1
