Dashes and underscores are different -_-

--- a/tox.ini
+++ b/tox.ini
@@ -83,7 +83,7 @@ commands =
     pip list
     # first install our starting version
     git checkout v1.1.1
-    python manage.py migrate django-celery-beat
+    python manage.py migrate django_celery_beat
     # now install latest and ensure all migrations continue to work
     git checkout master
     python manage.py migrate django_celery_beat
