Add upgrade tests for other versions too

--- a/tox.ini
+++ b/tox.ini
@@ -90,6 +90,57 @@ commands =
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
 
+[testenv:upgradebeat120]
+basepython = python2.7
+whitelist_externals = *
+commands =
+    # must use older versions for starting with older celery-beat
+    pip install "django>=1.11.17,<2.0"
+    pip install "celery<5.0.0"
+    pip list
+    # first install our starting version
+    git checkout v1.2.0
+    python manage.py migrate django_celery_beat
+    # now install latest and ensure all migrations continue to work
+    git checkout master
+    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat 0001
+    python manage.py migrate django_celery_beat
+
+[testenv:upgradebeat130]
+basepython = python2.7
+whitelist_externals = *
+commands =
+    # must use older versions for starting with older celery-beat
+    pip install "django>=1.11.17,<2.0"
+    pip install "celery<5.0.0"
+    pip list
+    # first install our starting version
+    git checkout v1.3.0
+    python manage.py migrate django_celery_beat
+    # now install latest and ensure all migrations continue to work
+    git checkout master
+    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat 0001
+    python manage.py migrate django_celery_beat
+
+[testenv:upgradebeat140]
+basepython = python2.7
+whitelist_externals = *
+commands =
+    # must use older versions for starting with older celery-beat
+    pip install "django>=1.11.17,<2.0"
+    pip install "celery<5.0.0"
+    pip list
+    # first install our starting version
+    git checkout v1.4.0
+    python manage.py migrate django_celery_beat
+    # now install latest and ensure all migrations continue to work
+    git checkout master
+    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat 0001
+    python manage.py migrate django_celery_beat
+
 [testenv:apicheck]
 basepython = python3.5
 commands =
