--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ matrix:
   include:
     - {python: 3.7, env: TOXENV=python37, dist: xenial, sudo: true}
     - { python: 2.7, env: TOXENV=upgradebeat111 }
+    - { python: 2.7, env: TOXENV=upgradebeat120 }
+    - { python: 2.7, env: TOXENV=upgradebeat130 }
+    - { python: 2.7, env: TOXENV=upgradebeat140 }
     - { python: 3.5, env: TOXENV=flake8 }
     - { python: 2.7, env: TOXENV=flakeplus }
     - { python: 3.5, env: TOXENV=pydocstyle }
