Account for PR vs branch tests and set git back to original hash instead of master

--- a/tox.ini
+++ b/tox.ini
@@ -81,11 +81,13 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
+    GIT_DEV_HASH=$(git rev-parse HEAD)
     # first install our starting version
+    git fetch
     git checkout v1.1.1
     python manage.py migrate django_celery_beat
     # now install latest and ensure all migrations continue to work
-    git checkout master
+    git checkout $GIT_DEV_HASH
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
@@ -98,11 +100,13 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
+    GIT_DEV_HASH=$(git rev-parse HEAD)
     # first install our starting version
+    git fetch
     git checkout v1.2.0
     python manage.py migrate django_celery_beat
     # now install latest and ensure all migrations continue to work
-    git checkout master
+    git checkout $GIT_DEV_HASH
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
@@ -115,11 +119,13 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
+    GIT_DEV_HASH=$(git rev-parse HEAD)
     # first install our starting version
+    git fetch
     git checkout v1.3.0
     python manage.py migrate django_celery_beat
     # now install latest and ensure all migrations continue to work
-    git checkout master
+    git checkout $GIT_DEV_HASH
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
@@ -132,11 +138,13 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
+    GIT_DEV_HASH=$(git rev-parse HEAD)
     # first install our starting version
+    git fetch
     git checkout v1.4.0
     python manage.py migrate django_celery_beat
     # now install latest and ensure all migrations continue to work
-    git checkout master
+    git checkout $GIT_DEV_HASH
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
