--- a/tox.ini
+++ b/tox.ini
@@ -82,7 +82,7 @@ commands =
     pip install "celery<5.0.0"
     pip list
     # save current hash so we can come back to it
-    git rev-parse HEAD > commit.hash
+    bash -c "git rev-parse HEAD > commit.hash"
     # first install our starting version
     git fetch
     git checkout v1.1.1
