--- a/tox.ini
+++ b/tox.ini
@@ -83,8 +83,9 @@ commands =
     pip list
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
+    cat commit.hash
     # first install our starting version
-    git fetch
+    git fetch --tags
     git checkout v1.1.1
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
