More wrapping commands in bash -c

--- a/tox.ini
+++ b/tox.ini
@@ -89,7 +89,7 @@ commands =
     git checkout v1.1.1
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
-    cat commit.hash | git checkout -
+    bash -c "cat commit.hash | git checkout -"
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
