Copy working system to other upgrade jobs

--- a/tox.ini
+++ b/tox.ini
@@ -102,13 +102,15 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
-    GIT_DEV_HASH=$(git rev-parse HEAD)
+    # save current hash so we can come back to it
+    bash -c "git rev-parse HEAD > commit.hash"
+    cat commit.hash
     # first install our starting version
-    git fetch
+    git fetch --tags
     git checkout v1.2.0
     python manage.py migrate django_celery_beat
-    # now install latest and ensure all migrations continue to work
-    git checkout $GIT_DEV_HASH
+    # now return to previous hash and ensure all migrations continue to work
+    bash -c "cat commit.hash | git checkout -"
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
@@ -121,13 +123,15 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
-    GIT_DEV_HASH=$(git rev-parse HEAD)
+    # save current hash so we can come back to it
+    bash -c "git rev-parse HEAD > commit.hash"
+    cat commit.hash
     # first install our starting version
-    git fetch
+    git fetch --tags
     git checkout v1.3.0
     python manage.py migrate django_celery_beat
-    # now install latest and ensure all migrations continue to work
-    git checkout $GIT_DEV_HASH
+    # now return to previous hash and ensure all migrations continue to work
+    bash -c "cat commit.hash | git checkout -"
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
@@ -140,13 +144,15 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
-    GIT_DEV_HASH=$(git rev-parse HEAD)
+    # save current hash so we can come back to it
+    bash -c "git rev-parse HEAD > commit.hash"
+    cat commit.hash
     # first install our starting version
-    git fetch
+    git fetch --tags
     git checkout v1.4.0
     python manage.py migrate django_celery_beat
-    # now install latest and ensure all migrations continue to work
-    git checkout $GIT_DEV_HASH
+    # now return to previous hash and ensure all migrations continue to work
+    bash -c "cat commit.hash | git checkout -"
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
