Add verbosity to migrate commands

--- a/tox.ini
+++ b/tox.ini
@@ -153,9 +153,9 @@ commands =
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
-    python manage.py migrate django_celery_beat
-    python manage.py migrate django_celery_beat 0001
-    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat --verbosity 2
+    python manage.py migrate django_celery_beat 0001 --verbosity 2
+    python manage.py migrate django_celery_beat --verbosity 2
 
 [testenv:apicheck]
 basepython = python3.5
