Add some debugging commands to 1.3.0 and 1.4.0 upgrades

--- a/tox.ini
+++ b/tox.ini
@@ -123,6 +123,7 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
+    git clean -n
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
@@ -132,9 +133,9 @@ commands =
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
-    python manage.py migrate django_celery_beat
-    python manage.py migrate django_celery_beat 0001
-    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat --verbosity 2
+    python manage.py migrate django_celery_beat 0001 --verbosity 2
+    python manage.py migrate django_celery_beat --verbosity 2
 
 [testenv:upgradebeat140]
 basepython = python2.7
@@ -144,6 +145,7 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
+    git clean -n
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
